Use default rsync mirrors with RSYNC_DEFAULT.

--- a/sbotools.conf
+++ b/sbotools.conf
@@ -1,5 +1,7 @@
 # sbotools.conf
 
+# Settings use KEY=VALUE.
+#
 # Empty and commented lines are ignored. There should be no whitespace
 # to the left of the options.
 #
@@ -20,7 +22,7 @@
 
 #NOCLEAN=FALSE
 
-# GIT_BRANCH - if TRUE, use a custom git branch for the SBo repository
+# GIT_BRANCH - if TRUE, use a custom git branch for the SBo repository.
 
 #GIT_BRANCH=FALSE
 
@@ -41,16 +43,21 @@
 
 # LOCAL_OVERRIDES - if set to a path, any directory name under that path
 # matching a SlackBuild name will be used in preference to the main
-# repo.
+# repository.
 
 #LOCAL_OVERRIDES=FALSE
 
 # SLACKWARE_VERSION - if set to a version specification, force use of
-# the SBo repository for that version
+# the SBo repository for that version.
 
 #SLACKWARE_VERSION=FALSE
 
-# REPO - if set to a URL, use this as the SBo repo. Git and rsync
+# REPO - if set to a URL, use this as the SBo repository. Git and rsync
 # repositories only.
 
 #REPO=FALSE
+
+# RSYNC_DEFAULT - if TRUE, the default mirror will be rsync except for
+# -current.
+
+#RSYNC_DEFAULT=FALSE
