fix a variable name, and man pages

--- a/sbotools.conf
+++ b/sbotools.conf
@@ -22,12 +22,12 @@
 
 #NOCLEAN=FALSE
 
-# GIT_BRANCH - if TRUE, use a custom git branch for the SBo repository.
+# GIT_BRANCH - if set to a branch name, use a custom git branch for the SBo
+# repository.
 
 #GIT_BRANCH=FALSE
 
-# BUILD_IGNORE - if TRUE, do upgrades only if the version (and not
-# build) number differs.
+# BUILD_IGNORE - if TRUE, do upgrades only if the version number differs.
 
 #BUILD_IGNORE=FALSE
 
