--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/pghvlaans/sbotools3/"
 
 defaults:
   # _pages
@@ -58,10 +58,10 @@ defaults:
     values:
       layout: single
       author_profile: false
-
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
+  # man
+  - scope:
+      path: "pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: false
