--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ plugins:
 
 footer:
   links:
-    - label: "GitHub"
+    - label: "sbotools3 on GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/pghvlaans/sbotools3/"
 
@@ -55,17 +55,21 @@ atom_feed:
   hide: true
 
 defaults:
+  # everything
+  - scope:
+    path: ""
+    type: pages
   # _pages
   - scope:
       path: "_pages"
-      type: default
+      type: pages
     values:
       layout: single
       author_profile: false
   # man
   - scope:
       path: "man"
-      type: default
+      type: pages
     values:
       layout: single
       author_profile: false
