--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,9 @@ defaults:
   - scope:
     path: ""
     type: pages
+    values:
+      layout: single
+      author_profile: false
   # _pages
   - scope:
       path: "_pages"
