--- a/_config.yml
+++ b/_config.yml
@@ -55,10 +55,10 @@ atom_feed:
   hide: true
 
 defaults:
-  # everything
+  # root directory
   - scope:
-    path: ""
-    type: pages
+      path: ""
+      type: pages
     values:
       layout: single
       author_profile: false
