Last cleanup for sbotools.conf.

--- a/sbotools.conf
+++ b/sbotools.conf
@@ -10,7 +10,7 @@
 #
 # See sboconfig(1) and sbotools.conf(5).
 
-# DISTCLEAN - if TRUE, then remove source code.
+# DISTCLEAN - if TRUE, remove source code.
 
 #DISTCLEAN=FALSE
 
@@ -18,7 +18,7 @@
 
 #JOBS=FALSE
 
-# NOCLEAN - if TRUE, then do not clean working directories after building.
+# NOCLEAN - if TRUE, do not clean working directories after building.
 
 #NOCLEAN=FALSE
 
@@ -47,7 +47,7 @@
 
 #LOCAL_OVERRIDES=FALSE
 
-# SLACKWARE_VERSION - if set to a version specification, force use of
+# SLACKWARE_VERSION - if set to a version specification, force the use of
 # the SBo repository for that version.
 
 #SLACKWARE_VERSION=FALSE
