--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,4 +6,4 @@ main:
   - title: "Downloads"
     url: /downloads/
   - title: "Development"
-    url: https://github.com/pghvlaans/sbotools3/
+    url: /development/
