--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,6 @@ defaults:
     values:
       layout: single
       author_profile: false
-      title: false
   # _pages
   - scope:
       path: "_pages"
@@ -84,7 +83,6 @@ defaults:
     values:
       layout: single
       author_profile: false
-      title: false
   # downloads
   - scope:
       path: "downloads"
@@ -92,7 +90,7 @@ defaults:
     values:
       layout: single
       author_profile: false
-      title: false
+      title: "Downloads"
   # development
   - scope:
       path: "development"
