--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,6 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 
 include:
-  - _pages
   - man
   - downloads
   - development
@@ -68,13 +67,6 @@ defaults:
     values:
       layout: single
       author_profile: false
-  # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: false
       title: false
   # man
   - scope:
@@ -83,6 +75,7 @@ defaults:
     values:
       layout: single
       author_profile: false
+      title: false
   # downloads
   - scope:
       path: "downloads"
@@ -90,7 +83,7 @@ defaults:
     values:
       layout: single
       author_profile: false
-      title: "Downloads"
+      title: false
   # development
   - scope:
       path: "development"
@@ -98,4 +91,4 @@ defaults:
     values:
       layout: single
       author_profile: false
-      title: "Development"
+      title: false
