--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 
 include:
+  - _pages
   - man
   - downloads
   - development
@@ -63,6 +64,14 @@ defaults:
   # root directory
   - scope:
       path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: false
+      title: false
+  # _pages
+  - scope:
+      path: "_pages"
       type: pages
     values:
       layout: single
