--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ defaults:
       path: "man"
       type: pages
     values:
-      layout: single
+      layout: man
       author_profile: false
       title: false
   # downloads
