--- a/_config.yml
+++ b/_config.yml
@@ -68,17 +68,9 @@ defaults:
       layout: single
       author_profile: false
       title: false
-  # man/index.html
-  - scope:
-      path: "man/index.html"
-      type: pages
-    values:
-      layout: singe
-      author_profile: false
-      title: false
   # man
   - scope:
-      path: "man"
+      path: "man/*"
       type: pages
     values:
       layout: man
