actually, monospaced man index page makes sense.

--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ defaults:
       title: false
   # man
   - scope:
-      path: "man/*"
+      path: "man"
       type: pages
     values:
       layout: man
