--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,14 @@ defaults:
       layout: single
       author_profile: false
       title: false
+  # ChangeLog
+  - scope:
+      path: "ChangeLog.html"
+      type: pages
+    values:
+      layout: man
+      author_profile: false
+      title: false
   # man
   - scope:
       path: "man"
