--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ defaults:
       title: false
   # ChangeLog
   - scope:
-      path: "ChangeLog.html"
+      path: "/ChangeLog.html"
       type: pages
     values:
       layout: man
