--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ include:
   - man
   - downloads
   - development
-  - ChangeLog.html
+  - ChangeLog
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -71,7 +71,7 @@ defaults:
       title: false
   # ChangeLog
   - scope:
-      path: "ChangeLog.html"
+      path: "ChangeLog"
       type: pages
     values:
       layout: man
