--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -10,12 +10,12 @@
 #
 # See sboconfig(1) and sbotools.conf(5).
 
+#CLASSIC=FALSE
+
 # CLASSIC - if TRUE, enable BUILD_IGNORE and RSYNC_DEFAULT; disable
 # build increment and out-of-tree output for sbocheck; disable
 # displaying saved build options. This is a more traditional look-and-
 # feel.
-
-#CLASSIC=FALSE
 
 # DISTCLEAN - if TRUE, remove source code.
 
@@ -33,6 +33,10 @@
 # repository.
 
 #GIT_BRANCH=FALSE
+
+# GPG_VERIFY - if TRUE, perform GnuPG verification.
+
+#GPG_VERIFY=FALSE
 
 # BUILD_IGNORE - if TRUE, do upgrades only if the version number differs.
 
