Add GPG verification (#11)
* GPG verification

* gpg code cleanup.

* gpg compatibility fixes

* Fix typos

* 14.0 and 14.1 gpg fixes; use rsync for these

* Repo.pm: Verify all asc files in 14.0 even if not a full check.

* Repo.pm: add missing return 0's

* Log GPG output rather than displaying it.

* Tweak 14.0 output.

* Better log handling; more informative no-pull rsync output.

* rsync gpg verification: lockfile stops non-full checks immediately

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -34,6 +34,10 @@
 
 #GIT_BRANCH=FALSE
 
+# GPG_VERIFY - if TRUE, perform GnuPG verification.
+
+#GPG_VERIFY=FALSE
+
 # BUILD_IGNORE - if TRUE, do upgrades only if the version number differs.
 
 #BUILD_IGNORE=FALSE
