--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 minimal_mistakes_skin: default
 search: false
 copyright: K. Eugene Carlson
+copyright_url: "https://github.com/pghvlaans/"
 minimal_mistakes_skin: air
 
 # Build settings
