--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -64,7 +64,8 @@
 #SLACKWARE_VERSION=FALSE
 
 # REPO - if set to a URL, use this as the SBo repository. Git and rsync
-# repositories only.
+# repositories only; the URL must either begin with rsync:// or end with
+# .git.
 
 #REPO=FALSE
 
