Do not lint REPO so as to avoid potential breaking change

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -64,8 +64,7 @@
 #SLACKWARE_VERSION=FALSE
 
 # REPO - if set to a URL, use this as the SBo repository. Git and rsync
-# repositories only; the URL must either begin with rsync:// or end with
-# .git.
+# repositories only.
 
 #REPO=FALSE
 
