More documentation for sboconfig --reset

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -6,7 +6,9 @@
 # to the left of the options.
 #
 # The default option for SBO_HOME is /usr/sbo. All other defaults are
-# FALSE.
+# FALSE. sboconfig(1) can be used to restore the default configuration:
+#
+#   sboconfig --reset
 #
 # See sboconfig(1) and sbotools.conf(5).
 
