README.md formatting, proper SlackBuilds.org capitalization.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -49,7 +49,7 @@
 
 #PKG_DIR=FALSE
 
-# SBO_HOME - if set to a path, this is where the slackbuilds.org tree
+# SBO_HOME - if set to a path, this is where the SlackBuilds.org tree
 # will live.
 
 #SBO_HOME=/usr/sbo
