--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: sbotools
-subtitle: A ports-like interface to slackbuilds.org.
+subtitle: A ports-like interface to SlackBuilds.org.
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  sbotools is a ports-like interface to slackbuilds.org
+  sbotools is a ports-like interface to SlackBuilds.org
   written in Perl.
 minimal_mistakes_skin: default
 search: false
