Improve 'missing' script handling.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -50,6 +50,13 @@
 
 #BUILD_IGNORE=FALSE
 
+# OBSOLETE_CHECK - if TRUE, download an updated copy of the script list at
+# /etc/sbotools/obsolete from the sbotools home page
+# (https://pghvlaans.github.io/sbotools) when running sbocheck in
+# Slackware -current.
+
+#OBSOLETE_CHECK=FALSE
+
 # PKG_DIR - if set to a path, store newly-built packages here regardless
 # of DISTCLEAN.
 
