Source executable profile.d/*.sh if ETC_PROFILE.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -29,6 +29,11 @@
 
 #DISTCLEAN=FALSE
 
+# ETC_PROFILE - if TRUE, source executable *.sh scripts from /etc/profile.d
+# before building.
+
+#ETC_PROFILE=FALSE
+
 # JOBS - if numeric, use with -j in MAKEOPTS.
 
 #JOBS=FALSE
