For sbotest compatibility

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -62,6 +62,10 @@
 
 #OBSOLETE_CHECK=FALSE
 
+# LOG_DIR - if set to a path, save build logs here.
+
+#LOG_DIR=FALSE
+
 # PKG_DIR - if set to a path, store newly-built packages here regardless
 # of DISTCLEAN.
 
