Add setting NOWRAP.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -55,6 +55,10 @@
 
 #BUILD_IGNORE=FALSE
 
+# NOWRAP - if TRUE, do not wrap sbotools output.
+
+#NOWRAP=FALSE
+
 # OBSOLETE_CHECK - if TRUE, download an updated copy of the script list at
 # /etc/sbotools/obsolete from the sbotools home page
 # (https://pghvlaans.github.io/sbotools) when running sbocheck in
