Add NOCOLOR and color output.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -12,7 +12,7 @@
 #
 # See sboconfig(1) and sbotools.conf(5).
 
-# CLASSIC - if TRUE, enable BUILD_IGNORE and RSYNC_DEFAULT; disable
+# CLASSIC - if TRUE, enable BUILD_IGNORE, RSYNC_DEFAULT and NOCOLOR; disable
 # build increment and out-of-tree output for sbocheck; disable
 # displaying saved build options. This is a more traditional look-and-
 # feel.
@@ -54,6 +54,11 @@
 # BUILD_IGNORE - if TRUE, do upgrades only if the version number differs.
 
 #BUILD_IGNORE=FALSE
+
+# NOCOLOR - if TRUE, disable sbotools color output. See sbotools.colors(5) for
+# information about customizing output colors.
+
+#NOCOLOR=FALSE
 
 # NOWRAP - if TRUE, do not wrap sbotools output.
 
