--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -12,8 +12,8 @@
 #
 # See sboconfig(1) and sbotools.conf(5).
 
-# CLASSIC - if TRUE, enable BUILD_IGNORE, RSYNC_DEFAULT and NOCOLOR; disable
-# build increment and out-of-tree output for sbocheck; disable
+# CLASSIC - if TRUE, enable BUILD_IGNORE and RSYNC_DEFAULT, and disable
+# COLOR; disable build increment and out-of-tree output for sbocheck; disable
 # displaying saved build options. This is a more traditional look-and-
 # feel.
 
@@ -55,10 +55,10 @@
 
 #BUILD_IGNORE=FALSE
 
-# NOCOLOR - if TRUE, disable sbotools color output. See sbotools.colors(5) for
+# COLOR - if TRUE, enable sbotools color output. See sbotools.colors(5) for
 # information about customizing output colors.
 
-#NOCOLOR=FALSE
+#COLOR=FALSE
 
 # NOWRAP - if TRUE, do not wrap sbotools output.
 
