Add shared object checks.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -96,6 +96,12 @@
 
 #SLACKWARE_VERSION=FALSE
 
+# SO_CHECK - if TRUE, sbocheck and sboupgrade look for SBO packages with missing
+# shared object dependencies (solibs). Except for binary repackages, this often
+# means a rebuild is needed.
+
+#SO_CHECK=FALSE
+
 # STRICT_UPGRADES - if TRUE, attempt to upgrade only if the available version
 # or build number is higher. This has no effect on local override scripts.
 
