Setting DIALOGRC and sbotool man page.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -24,6 +24,10 @@
 
 #CPAN_IGNORE=FALSE
 
+# DIALOGRC - if a FILE, use it as dialogrc when running sbotool.
+
+#DIALOGRC=FALSE
+
 # DISTCLEAN - if TRUE, remove the downloaded source code and completed
 # package archives.
 
