python and ruby checks for all packages; retract perl for now.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -102,8 +102,8 @@
 
 # SO_CHECK - if TRUE, sbocheck and sboupgrade look for SBO packages with missing
 # shared object dependencies (solibs). Except for binary repackages, this often
-# means a rebuild is needed. When running sbocheck, find incompatible SBO perl,
-# python and ruby packages as well.
+# means a rebuild is needed. When running sbocheck, find incompatible SBO python
+# and ruby packages as well.
 
 #SO_CHECK=FALSE
 
