sbocheck: -O downloads perl_vers.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -68,8 +68,9 @@
 
 #NOWRAP=FALSE
 
-# OBSOLETE_CHECK - if TRUE, download an updated copy of the script list at
-# /etc/sbotools/obsolete from the sbotools home page
+# OBSOLETE_CHECK - if TRUE, download updated copies of the script list at
+# /etc/sbotools/obsolete and the perl version history file at
+# /etc/sbotools/perl_vers from the sbotools home page
 # (https://pghvlaans.github.io/sbotools) when running sbocheck in
 # Slackware -current.
 
