Note recommended non-default settings.

--- a/etc/sbotools.conf
+++ b/etc/sbotools.conf
@@ -10,6 +10,8 @@
 #
 #   sboconfig --reset
 #
+# Recommended non-default settings are noted.
+#
 # See sboconfig(1) and sbotools.conf(5).
 
 # CLASSIC - if TRUE, enable BUILD_IGNORE and RSYNC_DEFAULT, and disable
@@ -21,6 +23,8 @@
 
 # CPAN_IGNORE - if TRUE, install scripts even if they are already installed
 # from the CPAN.
+#
+# Recommended value: TRUE
 
 #CPAN_IGNORE=FALSE
 
@@ -35,6 +39,8 @@
 
 # ETC_PROFILE - if TRUE, source executable *.sh scripts from /etc/profile.d
 # before building.
+#
+# Recommended value: TRUE
 
 #ETC_PROFILE=FALSE
 
@@ -52,6 +58,9 @@
 #GIT_BRANCH=FALSE
 
 # GPG_VERIFY - if TRUE, perform GnuPG verification.
+#
+# Recommended value: TRUE (provided that the upstream repository is regularly
+# signed with gpg)
 
 #GPG_VERIFY=FALSE
 
@@ -61,6 +70,8 @@
 
 # COLOR - if TRUE, enable sbotools color output. See sbotools.colors(5) for
 # information about customizing output colors.
+#
+# Recommended value: TRUE
 
 #COLOR=FALSE
 
@@ -105,6 +116,8 @@
 # shared object dependencies (solibs). Except for binary repackages, this often
 # means a rebuild is needed. When running sbocheck, find incompatible SBO python
 # and ruby packages as well.
+#
+# Recommended value: TRUE
 
 #SO_CHECK=FALSE
 
